--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy==1.21.6
 PyYAML==3.13
 scikit-image==0.18.3
 streamlit>=1.8.1
-tensorflow==2.8.0
+tensorflow==2.8.0+zzzcolab20220506162203
 tensorflow-datasets==4.0.1
 tensorflow-estimator==2.8.0
 tensorflow-hub==0.12.0
