--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ keras==2.8.0
 numpy==1.21.6
 PyYAML==3.13
 scikit-image==0.18.3
-streamlit>=1.8.1
+streamlit==1.9.0
 tensorflow==2.8.0+zzzcolab20220506162203
 tensorflow-datasets==4.0.1
 tensorflow-estimator==2.8.0
